Fixed the selected song modal on smaller devices

--- a/src/Frontend/Styles/Dashboard/SelectedSong.css
+++ b/src/Frontend/Styles/Dashboard/SelectedSong.css
@@ -13,6 +13,7 @@
 
 .SelectedSongModal {
   width: 60%;
+  height: 90%;
   background: white;
   padding: 2rem;
   border-radius: 12px;
@@ -46,6 +47,7 @@
 
 .SelectedCoverImage {
   max-width: 100%;
+  max-width: 450px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
@@ -62,9 +64,52 @@
   cursor: pointer;
   width: 30%;
   max-width: 150px;
+  min-width: 100px;
   text-align: center;
 }
 
 .CloseButton:hover {
   background-color: #cc0000;
+}
+
+@media (max-width: 1600px) {
+  .SelectedCoverImage {
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .SelectedCoverImage {
+    max-width: 300px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .SelectedCoverImage {
+    max-width: 200px;
+  }
+}
+
+@media (max-width: 800px) {
+  .SelectedCoverImage {
+    width: 120px;
+  }
+}
+
+@media (max-width: 715px) {
+  .SelectedCoverImage {
+    width: 100px;
+  }
+}
+
+@media (max-width: 550px) {
+  .SelectedCoverImage {
+    width: 25%;
+  }
+}
+
+@media (max-width: 550px) {
+  .SelectedCoverImage {
+    width: 0%;
+  }
 }
